--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,17 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag "application", "data-turbo-track": "reload" %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container mx-auto px-4">
+      <nav class="mb-4 border-b border-gray-500">
+        <%= link_to root_path do %>
+          Bienvenido <%= Avatar.find_by id: session[:avatar_id] %>
+        <% end %>
+      </nav>
+      <%= yield %>
+    </div>
   </body>
 </html>
