--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ input[type=submit] {
+  padding: 4px:
+ }
+ a {
+  color: darkblue;
+ }
+ a:hover{
+   text-decoration: underline;
+ }
