--- a/app/views/avatars/_form.html.erb
+++ b/app/views/avatars/_form.html.erb
@@ -1,23 +1,21 @@
-<%= turbo_frame_tag dom_id(avatar) do %>
-  <%= form_with(model: avatar) do |form| %>
-    <% if avatar.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(avatar.errors.count, "error") %> prohibited this avatar from being saved:</h2>
-        <ul>
-          <% avatar.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
+<%= form_with(model: avatar) do |form| %>
+  <% if avatar.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(avatar.errors.count, "error") %> prohibited this avatar from being saved:</h2>
+      <ul>
+        <% avatar.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
     </div>
   <% end %>
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit class:"p-2 bg-gray-800 text-white" %>
+  </div>
 <% end %>
