--- a/app/views/avatars/index.html.erb
+++ b/app/views/avatars/index.html.erb
@@ -1,7 +1,13 @@
-<p id="notice"><%= notice %></p>
+<%= turbo_stream_from "avatars" %>
 
-<h1>Avatars</h1>
-<div class="flex flex-wrap">
+<h1 class="text-2xl font-bold my-8">
+Avatars
+  (<span id="avatar_counter" class="text-red-800"><%= @avatars.count %></span>)
+</h1>
+
+<%= link_to 'New Avatar', new_avatar_path, class: " p-2 border-gray-800 border bg-gray-200" %>
+
+<div class="flex flex-wrap my-8">
   <% @avatars.each do |avatar| %>
       <div class="border border-gray-300 shadow p-2 mr-1 mb-1">
         <%= turbo_frame_tag dom_id(avatar) do %>
@@ -10,7 +16,3 @@
       </div>
    <% end %>
 </div>
-
-<br>
-
-<%= link_to 'New Avatar', new_avatar_path %>
