--- a/app/views/avatars/_form.html.erb
+++ b/app/views/avatars/_form.html.erb
@@ -10,12 +10,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field my-4">
     <%= form.label :name %>
+    <br />
     <%= form.text_field :name %>
   </div>
 
-  <div class="actions">
+  <div class="actions mb-4">
     <%= form.submit class:"p-2 bg-gray-800 text-white" %>
   </div>
 <% end %>
